Added socket js and integrated angular & bootstrap

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<title>Simple Chat</title>
+
+	<!-- CSS -->
+	<link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
+	<!--responsive web design-->
+	<link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
 </head>
 <body>
 
+	<div class="container">
+
+
+
+	</div>
+	
+	<script src="libs/jquery/dist/jquery.min.js"></script>
+	<script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="libs/angular/angular.min.js"></script>
+	<script src="libs/angular-route/angular-route.min.js"></script>
 </body>
 </html>
