--- a/public/index.html
+++ b/public/index.html
@@ -10,18 +10,38 @@
 	<link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
 	<!--responsive web design-->
 	<link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
+
+	<script src="libs/angular/angular.min.js"></script>
 </head>
-<body>
+<body ng-app="chatApp">
 
-	<div class="container">
-
-
-
+	<div class="container" ng-controller="mainController">
+		<form ng-submit="submitName()" >
+			<div class="modal fade" tabindex="-1" role="dialog" id="userModal">
+				<div class="modal-dialog" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h4 class="modal-title">Enter the chat...</h4>
+						</div>
+						<div class="modal-body">
+							<div class="form-group">
+								<label for="user">Name:</label>
+								<input type="text" class="form-control" id="user" name="user" ng-model='user' />
+							</div>
+						</div>
+						<div class="modal-footer">
+							<input type="submit" id="submit3" value="Enter chat" class="btn btn-primary"/>
+						</div>
+					</div><!-- /.modal-content -->
+				</div><!-- /.modal-dialog -->
+			</div><!-- /.modal -->
+		</form>
 	</div>
-	
+
 	<script src="libs/jquery/dist/jquery.min.js"></script>
 	<script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
-	<script src="libs/angular/angular.min.js"></script>
-	<script src="libs/angular-route/angular-route.min.js"></script>
+	<script src="js/controllers/MainController.js"></script>
+	<script src="js/app.js"></script>
+	
 </body>
 </html>
