--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
       </div>
     </div>
 
-    <div class="col-sm-9 col-xs-12 chat" style="overflow: hidden; outline: none;" tabindex="5001">
+    <div class="col-sm-9 col-xs-12 chat"  tabindex="5001">
       <div class="col-inside-lg decor-default">
         <div class="chat-body">
           <h6>Chat</h6>
