Changed chat name

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>IncogniChat</title>
+  <title>Marjaba Chat</title>
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/global.css">
   <script src="/socket.io/socket.io.js"></script>
